--- a/app.json
+++ b/app.json
@@ -8,7 +8,9 @@
     "pages/post/post",
     "pages/signup/signup",
     "pages/videos/videos",
-    "pages/upload/upload"
+    "pages/upload/upload",
+    "pages/postDetail/postDetail",
+    "pages/videoDetail/videoDetail"
   ],
   "tabBar": {
     "list": [
