--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "prettier --write ./**/*.js"
+    "lint": "prettier --write ./**/*.js ./**/*.ts"
   },
   "keywords": [],
   "author": "",
